--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
 
       # 2. Set up PHP
       - name: Set up PHP
-        uses: shivammathur/setup-php@v3
+        uses: shivammathur/setup-php@v2
         with:
           php-version: '8.2' # Use your Laravel project's PHP version
           extensions: mbstring, pdo, zip, bcmath
@@ -25,6 +25,13 @@ jobs:
       # 3. Install dependencies
       - name: Install Composer dependencies
         run: composer install --no-dev --optimize-autoloader
+
+      - name: Exclude files
+        run: |
+          echo "node_modules/" >> .gitignore
+          echo "storage/framework/cache/" >> .gitignore
+          echo "storage/framework/sessions/" >> .gitignore
+          echo "vendor/" >> .gitignore
 
       # 4. Prepare the application
       - name: Prepare Laravel application
@@ -36,10 +43,15 @@ jobs:
 
       # 5. Deploy using FTP
       - name: Deploy via FTP
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.5
+        uses: SamKirkland/FTP-Deploy-Action@v4
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: ./ # Your Laravel project directory
           server-dir: / # Your server's public directory
+          exclude: |
+            .git*
+            node_modules
+            storage/logs
+            vendor
