--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       # 4. Prepare the application
       - name: Prepare Laravel application
         run: |
-          cp .env.example .env
+#          cp .env.example .env
           php artisan config:cache
           php artisan route:cache
           php artisan view:cache
