--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,55 +1,55 @@
 name: FTP Deploy
-
 on:
   push:
     branches:
-      - main # Change this to your main branch
-
+      - main
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout the code
       - name: Checkout code
         uses: actions/checkout@v4
-
-      # 2. Set up PHP
       - name: Set up PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: '8.2' # Use your Laravel project's PHP version
+          php-version: '8.2'
           extensions: mbstring, pdo, zip, bcmath
           tools: composer
-
-      # 3. Install dependencies
       - name: Install Composer dependencies
         run: composer install --no-dev --optimize-autoloader
-
+      - name: Set up .env
+        run: |
+          php -r "file_exists('.env') || copy('.env.example', '.env');"
+          php artisan key:generate
+      - name: Migrate Database
+        env:
+          DB_CONNECTION: mysql
+          DB_HOST: ${{ secrets.DB_HOST }}
+          DB_PORT: ${{ secrets.DB_PORT }}
+          DB_DATABASE: ${{ secrets.DB_DATABASE }}
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        run: php artisan migrate --force
+      - name: Prepare Laravel application
+        run: |
+         php artisan config:cache
+         php artisan route:cache
+         php artisan view:cache
       - name: Exclude files
         run: |
           echo "node_modules/" >> .gitignore
           echo "storage/framework/cache/" >> .gitignore
           echo "storage/framework/sessions/" >> .gitignore
           echo "vendor/" >> .gitignore
-
-      # 4. Prepare the application
-      - name: Prepare Laravel application
-        run: |
-          cp .env.example .env
-          php artisan config:cache
-          php artisan route:cache
-          php artisan view:cache
-
-      # 5. Deploy using FTP
       - name: Deploy via FTP
         uses: SamKirkland/FTP-Deploy-Action@v4.3.5
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          local-dir: ./ # Your Laravel project directory
-          server-dir: / # Your server's public directory
+          local-dir: ./
+          server-dir: /
           exclude: |
             .git*
             node_modules
