--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
           extensions: mbstring, pdo, zip, bcmath
           tools: composer
       - name: Set working directory
-        run: cd /path/to/your/laravel/project  # Set the correct directory where artisan exists
+        run: / # Set the correct directory where artisan exists
       - name: Install Composer dependencies
         run: composer install --no-dev --optimize-autoloader
       - name: Set up .env
