--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,17 +16,17 @@ jobs:
           php-version: '8.2'
           extensions: mbstring, pdo, zip, bcmath
           tools: composer
-      - name: Install Composer dependencies
-        run: composer install --no-dev --optimize-autoloader
-      - name: Set up .env
-        run: |
-          php -r "file_exists('.env') || copy('.env.example', '.env');"
-          php artisan key:generate
-      - name: Prepare Laravel application
-        run: |
-          php artisan config:cache
-          php artisan route:cache
-          php artisan view:cache
+#      - name: Install Composer dependencies
+#        run: composer install --no-dev --optimize-autoloader
+#      - name: Set up .env
+#        run: |
+#          php -r "file_exists('.env') || copy('.env.example', '.env');"
+#          php artisan key:generate
+#      - name: Prepare Laravel application
+#        run: |
+#          php artisan config:cache
+#          php artisan route:cache
+#          php artisan view:cache
       - name: Set permissions
         run: |
           chmod -R 775 storage bootstrap/cache
